frontend/css/_base.scss
/* ... */
// .operator-map,
.journey-map {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
}

.has-sidebar {
    bottom: 45%;
}

.no-stops {
    bottom: 248px;
}

.map-sidebar {
    position: absolute;
    top: 55%;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
    padding: 1em 1em 100px;
}

.no-stops + .map-sidebar {
    top: auto;
    height: 132px;
}

.map-sidebar .navigation {
    overflow: hidden;
    margin: 1em 0;
}

.trip-timetable {
    .breadcrumb {
        border: 0;
        margin: -1em -1em 1em;
        padding-top: .65em;
        padding-left: .5em;

        a {
            padding: .25em .5em;
        }
    }

    label + table {
        margin-top: -2em;
    }

    table {
        table-layout: fixed;
        width: 100%;
    }

    tbody {
        white-space: nowrap;
    }

    th, td {
        width: 48px;
        padding: 4px 8px;
    }

    th {
        font-size: 12px;
        border: 0;
        border-bottom: 1px solid var(--border-color);
    }

    .stop-name {
        width: auto;
    }

    td {
        border-left: 1px solid var(--border-color);
    }

    td:last-child {
       padding-right: 0;
    }

    .stop-name {
        border-left: 0;
        padding-left: 0;

        a {
            display: block;
            margin: -4px -8px;
            margin-left: 0;
            padding: 4px 8px;
            padding-left: 0;
            overflow: hidden;
        }
    }

    .minor {
        font-size: 14px;

        + .minor td {
            border-top: 0;
        }
    }

    .previous,
    .next {
        margin: 0;
    }

    .is-highlighted {
        a {
            color: var(--active-link-color);
        }
    }
}

.credit {
    clear: both;
    font-size: .875em;
    overflow-wrap: anywhere;
}

.aside {
    clear: right; // clear departures 'Later ↓'
    margin-top: 1em;

    &:first-child {
        margin-top: 0;
    }

    table { // departures
        margin: 0 -.5em;
    }

    th {
        border: 0;
        padding: 0;
        padding-left: .5rem;
        font-size: .75em;
        vertical-align: bottom;
    }

    td {
        border: 0;
        padding: .125em .5em;
        vertical-align: top;

        &:nth-child(2) {
            width: 100%;
        }

        &:last-child {
            white-space: nowrap;
        }

        a {
            display: block;
            margin: -.125em -.5em;
            padding: .125em .5em;
        }
    }

    h2 {
        margin: .25em 0 .5em;
    }

    h3 {
        margin: 1em 0 0;
    }

    p {
        margin: .5em 0;
    }

    ul {
        margin: 0;
    }

    .credit {
        font-size: .75em;
        margin: .3em 0 0;
        text-align: right;
    }

     // datetime picker
    form {
        display: flex;
        gap: .5em;
        margin-bottom: .5em;
    }

    input {
        flex-grow: 1;
    }

    .vehicle {
        font-size: .75em;
    }
}

.maplibregl-popup-content time,
.tabular,
#fare-table td,
.aside td,
.trip-timetable td {
    font-variant-numeric: tabular-nums;
}

.stop-popup-times td {
    border: 0;
    padding: 0;
}

.message {
    border: 1px solid var(--border-color);
    padding: 1em;

    p, h2 {
        margin-top: 0;
    }

    ul {
        margin: 0;
    }
}

.situations {
    border: 1px solid var(--border-color);
    border-bottom: 0;
    margin: 1em 0;

    .situation {
        border-bottom: 1px solid var(--border-color);
        padding: 1em;
        margin: 0;

        p:first-child {
            margin-top: 0;
        }

        p:last-child {
            margin-bottom: 0;
        }
    }

    summary {
        padding: 1em;
        margin: -1em;
    }

    .dates {
        font-weight: normal;
        display: inline-block;
        margin-left: 1em;
    }
}

.ticket {
    border: 1px solid var(--border-color);
    color: inherit;
    display: block;
    padding: 1em;
    margin-bottom: -1px;
    position: relative;

    &:hover {
        text-decoration: none;
        border-color: var(--brand-color-darker-darker);
        z-index: 1;
    }

    h2,
    h3 {
        margin: 0;
        display: inline-block;
    }

    p {
        margin-bottom: 0;
    }

    .price {
        float: right;
        margin: 0;
    }
}

.contact-details {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    overflow-wrap: anywhere;

    dt {
        font-size: 12px;
    }

    dd {
        margin: 0;
    }

    .livery {
        float: left;
        margin-right: .25em;
    }
}

.previous {
    float: left;
}

.next {
    float: right;
}

nav {
    margin: 1em auto;
    overflow: hidden;

    ul, p {
        margin: 0;
    }
}

figure {
    margin: 1em 0;
    position: relative;

    img {
        display: block;
    }
}

figcaption {
    background: #000;
    color: #fff;
    font-size: .75em;
    padding: .25em;
    position: absolute;
    bottom: 0;
    left: 0;
}

.ad-wrapper {
    text-align: center;
    margin: 1em 0 10px;
    min-height: 120px;

    iframe {
        vertical-align: bottom;
    }
}

@media (min-height: 480px) {
    .ad-wrapper {
        position: sticky;
        top: 0;
        pointer-events: none;
        z-index: 9999;

        iframe {
            background: var(--background-color);
            pointer-events: auto;
        }
    }
}

.no-consent .ad-wrapper {
    position: static;
}

#content {
    margin-bottom: 1.5em;
}

.no-scroll {
    overflow: hidden;
}

body.has-overlay {
    overflow: hidden;
    position: relative;  // https://stackoverflow.com/questions/3047337/does-overflowhidden-applied-to-body-work-on-iphone-safari

    // services_header
    #AFM_inContentTop_ad {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        z-index: 9999;
        pointer-events: auto;
        height: 100px;
        overflow: hidden;
        background: var(--background-color);
    }

    #timetable {
        content-visibility: hidden;
    }
}
/* ... */

